--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,18 +16,12 @@ jobs:
         fetch-depth: 1
     
     - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
-        java-version: 1.8
-        
-    - name: Set up Maven cache
-      uses: actions/cache@v1
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-    
+        distribution: temurin
+        java-version: 17
+        cache: maven
+            
     - name: Build with Maven
       run: |
         mvn --batch-mode clean verify
