--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,7 @@ jobs:
       with:
         fetch-depth: 1
     
-    - name: Set up JDK 1.8
+    - name: Set up JDK
       uses: actions/setup-java@v3
       with:
         distribution: temurin
